# Schedule

./: CMakeLists.txt
src/: main.cpp
src/cmake/: config.h  config.h.in
src/excel/: excel.cpp  excel.h
src/logic/: logic.cpp  logic.h
src/testing/: testing.cpp  testing.h
src/ui/: ui.cpp  ui.h
src/worker/: worker.cpp  worker.h
